переделка состояние арен